--- a/scss/global.scss
+++ b/scss/global.scss
@@ -5,5 +5,7 @@
 
 @import "parts/general";
 @import "parts/home";
+@import "parts/why";
 @import "parts/effects";
 @import "parts/composants";
+@import "parts/footer";
