--- a/css/global.css
+++ b/css/global.css
@@ -48,138 +48,200 @@ img {
   font-family: 'Roboto Condensed Bold';
   src: url("../fonts/RobotoCondensed-Bold.ttf");
   font-weight: 700; }
-body {
+.all-content {
   background-color: #1a217f;
   background-image: url("../img/light.png");
   background-size: 100%;
   background-repeat: no-repeat;
-  background-position: 50% 0%; }
-  body .content {
-    height: 100vh;
-    overflow: hidden; }
-    body .content h1 {
-      font: 7em "OCR", sans-serif;
-      color: #fff;
-      margin: 7vh 0 0 5vw; }
-    body .content .counter {
-      position: absolute;
-      right: 30px;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      -o-transform: translateY(-50%);
-      transform: translateY(-50%); }
-      body .content .counter a {
-        font: 1.2rem "Roboto Condensed Regular", sans-serif;
-        color: #fff; }
-      body .content .counter a {
-        display: block;
-        text-align: center;
-        margin: 15px auto;
-        font: 1rem "Roboto Condensed Regular", sans-serif; }
-        body .content .counter a.active {
-          padding: 5px;
-          border: 1px solid #fff;
-          -webkit-border-radius: 50%;
-          -moz-border-radius: 50%;
-          border-radius: 50%;
-          font-size: 1.2rem; }
+  background-position: 50% 0%;
+  height: 100vh;
+  overflow: hidden; }
+  .all-content h1 {
+    font: 7em "OCR", sans-serif;
+    color: #fff;
+    margin: 7vh 0 0 5vw; }
+  .all-content .counter {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%); }
+    .all-content .counter a {
+      font: 1.2rem "Roboto Condensed Regular", sans-serif;
+      color: #fff; }
+    .all-content .counter a {
+      display: block;
+      text-align: center;
+      margin: 15px auto;
+      font: 1rem "Roboto Condensed Regular", sans-serif; }
+      .all-content .counter a.active {
+        padding: 5px;
+        border: 1px solid #fff;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        font-size: 1.2rem; }
 
 .home {
-  overflow-y: hidden; }
-  .home img {
-    position: absolute;
-    width: 100%;
-    top: -15vh;
-    z-index: -1; }
-  .home h2 {
-    font: 2rem "Roboto Condensed Regular", sans-serif;
-    text-transform: uppercase;
-    color: #fff;
-    letter-spacing: 3px;
-    text-align: center;
-    margin-top: 60vh; }
+  background-color: #1a217f;
+  background-image: url("../img/video-hero-finale.gif");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 0% 150%; }
+  .home .content {
+    height: 100vh;
+    overflow-y: hidden; }
+    .home .content h2 {
+      font: 2rem "Roboto Condensed Regular", sans-serif;
+      text-transform: uppercase;
+      color: #fff;
+      letter-spacing: 3px;
+      text-align: center;
+      margin-top: 60vh; }
 
-.effects {
+.why {
+  background-color: #1a217f;
+  background-image: url("../img/brain.gif");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 0% 100%; }
+  .why .content {
+    width: 50%;
+    margin: 10vh 0 0 20vw; }
+    .why .content h4 {
+      font: 1.3rem "Roboto Condensed Regular", sans-serif;
+      text-transform: uppercase;
+      color: #fff;
+      letter-spacing: 4.4px; }
+    .why .content h2 {
+      font: 5.5rem "Roboto Condensed Bold", sans-serif;
+      text-transform: uppercase;
+      color: #fff;
+      letter-spacing: 1px; }
+    .why .content p {
+      font: 1.5rem "Roboto Condensed Regular", sans-serif;
+      color: #fff;
+      margin: 3vh 0 0 4vw;
+      letter-spacing: 3.4px;
+      line-height: 1.5; }
+
+.effects .content {
   width: 40%;
   margin: 29vh 0 0 20vw; }
-  .effects h4 {
+  .effects .content h4 {
     font: 1.3rem "Roboto Condensed Regular", sans-serif;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 4.4px; }
-  .effects h2 {
+  .effects .content h2 {
     font: 5.5rem "Roboto Condensed Bold", sans-serif;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 1px; }
-  .effects p {
+  .effects .content p {
     font: 1.5rem "Roboto Condensed Regular", sans-serif;
     color: #fff;
     margin: 3vh 0 0 4vw;
     letter-spacing: 3.4px;
     line-height: 1.5; }
 
-.composants {
+.composants .content {
   width: 27%;
   margin: 29vh 0 0 45vw;
   overflow: hidden; }
-  .composants h4 {
+  .composants .content h4 {
     font: 1.3rem "Roboto Condensed Regular", sans-serif;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 4.4px; }
-  .composants h2 {
+  .composants .content h2 {
     font: 5.5rem "Roboto Condensed Bold", sans-serif;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 1px; }
-  .composants p {
+  .composants .content p {
     font: 1.5rem "Roboto Condensed Regular", sans-serif;
     color: #fff;
     margin: 3vh 0 0 4vw;
     letter-spacing: 3.4px;
     line-height: 1.5; }
-  .composants .leaf-component {
+  .composants .content .leaf-component {
     list-style: none;
     overflow: hidden; }
-    .composants .leaf-component li {
+    .composants .content .leaf-component li {
       position: absolute;
       opacity: 0.5; }
-      .composants .leaf-component li:nth-of-type(1) {
+      .composants .content .leaf-component li:nth-of-type(1) {
         top: 18vh;
         left: 0; }
-      .composants .leaf-component li:nth-of-type(2) {
+      .composants .content .leaf-component li:nth-of-type(2) {
         top: -5vh;
         left: 50vw; }
-      .composants .leaf-component li:nth-of-type(3) {
+      .composants .content .leaf-component li:nth-of-type(3) {
         top: 2vh;
         right: 0; }
-      .composants .leaf-component li:nth-of-type(4) {
+      .composants .content .leaf-component li:nth-of-type(4) {
         top: 55vh;
         left: 39vw; }
-      .composants .leaf-component li:nth-of-type(5) {
+      .composants .content .leaf-component li:nth-of-type(5) {
         bottom: 0;
         left: 35vw; }
-      .composants .leaf-component li:nth-of-type(6) {
+      .composants .content .leaf-component li:nth-of-type(6) {
         bottom: 0;
         left: 68vw; }
-      .composants .leaf-component li:nth-of-type(7) {
+      .composants .content .leaf-component li:nth-of-type(7) {
         bottom: 10vh;
         left: 0; }
-  .composants .pils-component {
+  .composants .content .pils-component {
     list-style: none; }
-    .composants .pils-component li {
+    .composants .content .pils-component li {
       position: absolute; }
-      .composants .pils-component li:nth-of-type(1) {
+      .composants .content .pils-component li:nth-of-type(1) {
         top: 75vh;
         left: 10vw; }
-      .composants .pils-component li:nth-of-type(2) {
+      .composants .content .pils-component li:nth-of-type(2) {
         top: 30vh;
         left: 25vw; }
-      .composants .pils-component li:nth-of-type(3) {
+      .composants .content .pils-component li:nth-of-type(3) {
         top: 75vh;
         left: 50vw; }
+
+.footer {
+  position: absolute;
+  bottom: 1vh;
+  width: 100%; }
+  .footer .social {
+    border: 1px solid #fff;
+    padding: 7px 15px;
+    margin-left: 2vw;
+    margin-right: 5vw;
+    display: inline-block; }
+    .footer .social p {
+      font: 1.5rem "Roboto Condensed Regular", sans-serif;
+      color: #fff;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      display: inline-block; }
+    .footer .social svg {
+      display: inline-block;
+      margin: 0 5px; }
+  .footer a {
+    display: inline-block;
+    font: 1.1rem "Roboto Condensed Regular", sans-serif;
+    letter-spacing: 2px;
+    color: #fff;
+    text-transform: uppercase;
+    margin-right: 3vw; }
+  .footer .copyright {
+    float: right;
+    font: 1.1rem "Roboto Condensed Regular", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #fff;
+    margin-right: 2vw;
+    margin-top: 1vh; }
 
 /*# sourceMappingURL=global.css.map */
