--- a/scss/global.scss
+++ b/scss/global.scss
@@ -8,6 +8,7 @@
 @import "parts/why";
 @import "parts/effects";
 @import "parts/composants";
+@import "parts/promise";
 @import "parts/footer";
 @import "parts/loader";
 
