--- a/scss/parts/_effects.scss
+++ b/scss/parts/_effects.scss
@@ -1,29 +1,47 @@
 .effects {
+    background-color: $blue;
+    background-image: url("../img/light.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: 50% 0%;
+    width: 100%;
+    height: 100vh;
+    padding: 29vh 0 0 15vw;
+    position: relative;
 
-    .content {
-        width: 40%;
-        margin: 29vh 0 0 20vw;
+    img {
+        position: absolute;
+        top: 5vh;
+        width: 75%;
+        left: 5vw;
 
-        h4 {
-            font: 1.3rem $roboto;
-            text-transform: uppercase;
-            color: $white;
-            letter-spacing: 4.4px;
-        }
-        h2 {
-            font: 5.5rem $robotoB;
-            text-transform: uppercase;
-            color: $white;
-            letter-spacing: 1px;
-        }
-        p {
-            font: 1.5rem $roboto;
-            color: $white;
-            margin: 3vh 0 0 4vw;
-            letter-spacing: 3.4px;
-            line-height: 1.5;
-        }
-    
+    }
+
+    h4 {
+        position: relative;
+        z-index: 1;
+        font: 1.3rem $roboto;
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 4.4px;
+    }
+    h2 {
+        position: relative;
+        z-index: 1;
+        font: 5.5rem $robotoB;
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 1px;
+    }
+    p {
+        position: relative;
+        z-index: 1;
+        font: 1.5rem $roboto;
+        color: $white;
+        margin: 3vh 0 0 4vw;
+        letter-spacing: 3.4px;
+        line-height: 1.5;
+        width: 40vw;
     }
 
 }
