--- a/scss/parts/_loader.scss
+++ b/scss/parts/_loader.scss
@@ -1,177 +1,188 @@
-body{
-    
-}
-div.loader-pill {
-    $bolb-color: #00b7d8;
-    display: flex;
-    margin-top: 50%;
-    transform: translateY(-50%);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-    h2{
-        font-size: 22px;
-        margin-bottom: 8%;
-        font-family: "Roboto";
-        font-weight: 100;
-        color: rgb(195, 200, 223);
-    }
+.loader {
 
+    div.loader-pill {
+        $bolb-color: #00b7d8;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 9;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100vh;
+        background: $blue;
+        transition: 0.5s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-    .shadow {
-      margin-top: 50px;
-      width: 10%;
-      height: 10px;
-      background: rgba(11, 21, 80, 0.4);
-      border-radius: 60%;
-    }
+        .loader-pill-content {
 
-    // Loader
-    .blobs {
-      width: 95px;
-      height: 30px;
-      margin-bottom: 2%;
-      position: relative;
-      overflow: hidden;
-      border-radius: 70px;
-      transform-style: preserve-3d;
-      animation: pills ease 3.7s infinite;
-      border: 1px solid #75d9f0;
-      background: radial-gradient(50% 100%, #fff 75%, #acedfc 100%);
+            h2 {
+                font-size: 22px;
+                margin-bottom: 8vh;
+                font-family: "Roboto";
+                font-weight: 100;
+                color: rgb(195, 200, 223);
+                transform: translateX(-10%);
+            }
 
-      // Blob center item
-      .bg-left {
-        width: 50%;
-        height: 100%;
-        background: $bolb-color;
+            .shadow {
+                margin-top: 50px;
+                width: 80%;
+                height: 10px;
+                background: rgba(11, 21, 80, 0.4);
+                border-radius: 60%;
+            }
 
-        /* Rectangle 3: */
-        transform: rotate(-180deg);
-        background-image: linear-gradient(0deg, #8aedff 2%, #00b7d8 30%);
-      }
-    }
+            // Loader
+            .blobs {
+                width: 95px;
+                height: 30px;
+                margin-bottom: 2%;
+                position: relative;
+                overflow: hidden;
+                border-radius: 70px;
+                transform-style: preserve-3d;
+                animation: pills ease 3.7s infinite;
+                border: 1px solid #75d9f0;
+                background: radial-gradient(50% 100%, #fff 75%, #acedfc 100%);
 
-    // Blob item
-    .blob {
-      position: absolute;
-      background: $bolb-color;
-      top: 50%;
-      left: 30%;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      animation: blobs ease-out 4.9s infinite;
-      transform: scale(0.9) translate(-50%, -50%);
-      transform-origin: center top;
-      opacity: 0;
+                // Blob center item
+                .bg-left {
+                    width: 50%;
+                    height: 100%;
+                    background: $bolb-color;
 
-      // Set animation delay for each of type
-      @for $i from 1 to 12 {
-        &:nth-child(#{$i}) {
-          animation-delay: $i * 0.2 + s;
+                    /* Rectangle 3: */
+                    transform: rotate(-180deg);
+                    background-image: linear-gradient(0deg, #8aedff 2%, #00b7d8 30%);
+                }
+            }
+
+            // Blob item
+            .blob {
+                position: absolute;
+                background: $bolb-color;
+                top: 50%;
+                left: 30%;
+                width: 15px;
+                height: 15px;
+                border-radius: 50%;
+                animation: blobs ease-out 4.9s infinite;
+                transform: scale(0.9) translate(-50%, -50%);
+                transform-origin: center top;
+                opacity: 0;
+
+                // Set animation delay for each of type
+                @for $i from 1 to 12 {
+                    &:nth-child(#{$i}) {
+                        animation-delay: $i * 0.2 + s;
+                    }
+                }
+            }
+
         }
-      }
+
+        // Keyframes variables
+        $left: calc(-330px - 50%);
+        $right: calc(330px - 50%);
+
+        // Keyframes
+        @keyframes blobs {
+            0% {
+                opacity: 0;
+                transform: scale(0) translate($left, -50%);
+            }
+            1% {
+                opacity: 1;
+            }
+            35%,
+            65% {
+                opacity: 1;
+                transform: scale(0.9) translate(-50%, -50%);
+            }
+            99% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+                transform: scale(0) translate($right, -50%);
+            }
+        }
+
+        @keyframes blob-grow {
+            0%,
+            39% {
+                transform: scale(0) translate(-50%, -50%);
+            }
+            40%,
+            42% {
+                transform: scale(1, 0.9) translate(-50%, -50%);
+            }
+            43%,
+            44% {
+                transform: scale(1.2, 1.1) translate(-50%, -50%);
+            }
+            45%,
+            46% {
+                transform: scale(1.3, 1.2) translate(-50%, -50%);
+            }
+            47%,
+            48% {
+                transform: scale(1.4, 1.3) translate(-50%, -50%);
+            }
+            52% {
+                transform: scale(1.5, 1.4) translate(-50%, -50%);
+            }
+            54% {
+                transform: scale(1.7, 1.6) translate(-50%, -50%);
+            }
+            58% {
+                transform: scale(1.8, 1.7) translate(-50%, -50%);
+            }
+            68%,
+            70% {
+                transform: scale(1.7, 1.5) translate(-50%, -50%);
+            }
+            78% {
+                transform: scale(1.6, 1.4) translate(-50%, -50%);
+            }
+            80%,
+            81% {
+                transform: scale(1.5, 1.4) translate(-50%, -50%);
+            }
+            82%,
+            83% {
+                transform: scale(1.4, 1.3) translate(-50%, -50%);
+            }
+            84%,
+            85% {
+                transform: scale(1.3, 1.2) translate(-50%, -50%);
+            }
+            86%,
+            87% {
+                transform: scale(1.2, 1.1) translate(-50%, -50%);
+            }
+            90%,
+            91% {
+                transform: scale(1, 0.9) translate(-50%, -50%);
+            }
+            92%,
+            100% {
+                transform: scale(0) translate(-50%, -50%);
+            }
+        }
+        @keyframes pills {
+            0% {
+                transform: rotate(0deg);
+            }
+            50% {
+                transform: rotate(90deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
     }
 
-    // Keyframes variables
-    $left: calc(-330px - 50%);
-    $right: calc(330px - 50%);
-
-    // Keyframes
-    @keyframes blobs {
-      0% {
-        opacity: 0;
-        transform: scale(0) translate($left, -50%);
-      }
-      1% {
-        opacity: 1;
-      }
-      35%,
-      65% {
-        opacity: 1;
-        transform: scale(0.9) translate(-50%, -50%);
-      }
-      99% {
-        opacity: 1;
-      }
-      100% {
-        opacity: 0;
-        transform: scale(0) translate($right, -50%);
-      }
-    }
-
-    @keyframes blob-grow {
-      0%,
-      39% {
-        transform: scale(0) translate(-50%, -50%);
-      }
-      40%,
-      42% {
-        transform: scale(1, 0.9) translate(-50%, -50%);
-      }
-      43%,
-      44% {
-        transform: scale(1.2, 1.1) translate(-50%, -50%);
-      }
-      45%,
-      46% {
-        transform: scale(1.3, 1.2) translate(-50%, -50%);
-      }
-      47%,
-      48% {
-        transform: scale(1.4, 1.3) translate(-50%, -50%);
-      }
-      52% {
-        transform: scale(1.5, 1.4) translate(-50%, -50%);
-      }
-      54% {
-        transform: scale(1.7, 1.6) translate(-50%, -50%);
-      }
-      58% {
-        transform: scale(1.8, 1.7) translate(-50%, -50%);
-      }
-      68%,
-      70% {
-        transform: scale(1.7, 1.5) translate(-50%, -50%);
-      }
-      78% {
-        transform: scale(1.6, 1.4) translate(-50%, -50%);
-      }
-      80%,
-      81% {
-        transform: scale(1.5, 1.4) translate(-50%, -50%);
-      }
-      82%,
-      83% {
-        transform: scale(1.4, 1.3) translate(-50%, -50%);
-      }
-      84%,
-      85% {
-        transform: scale(1.3, 1.2) translate(-50%, -50%);
-      }
-      86%,
-      87% {
-        transform: scale(1.2, 1.1) translate(-50%, -50%);
-      }
-      90%,
-      91% {
-        transform: scale(1, 0.9) translate(-50%, -50%);
-      }
-      92%,
-      100% {
-        transform: scale(0) translate(-50%, -50%);
-      }
-    }
-    @keyframes pills {
-      0% {
-        transform: rotate(0deg);
-      }
-      50% {
-        transform: rotate(90deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-  }
+}
