--- a/scss/parts/_why.scss
+++ b/scss/parts/_why.scss
@@ -1,35 +1,32 @@
-.why {
+.dystopie {
     background-color: $blue;
     background-image: url("../img/brain.gif");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 0% 100%;
+    width: 100%;
+    height: 86vh;
+    padding: 10vh 0 0 20vw;
 
-    .content {
-
-        width: 50%;
-        margin: 10vh 0 0 20vw;
-
-        h4 {
-            font: 1.3rem $roboto;
-            text-transform: uppercase;
-            color: $white;
-            letter-spacing: 4.4px;
-        }
-        h2 {
-            font: 5.5rem $robotoB;
-            text-transform: uppercase;
-            color: $white;
-            letter-spacing: 1px;
-        }
-        p {
-            font: 1.5rem $roboto;
-            color: $white;
-            margin: 3vh 0 0 4vw;
-            letter-spacing: 3.4px;
-            line-height: 1.5;
-        }
-
+    h4 {
+        font: 1.3rem $roboto;
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 4.4px;
+    }
+    h2 {
+        font: 5.5rem $robotoB;
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 1px;
+    }
+    p {
+        font: 1.5rem $roboto;
+        color: $white;
+        margin: 3vh 0 0 4vw;
+        letter-spacing: 3.4px;
+        line-height: 1.5;
+        width: 50vw;
     }
 
 }
