--- a/scss/parts/_composants.scss
+++ b/scss/parts/_composants.scss
@@ -43,7 +43,7 @@
                 left: 0;
             }
             &:nth-of-type(2) {
-                top: -5vh;
+                top: 0;
                 left: 50vw;
             }
             &:nth-of-type(3) {
