--- a/css/global.css
+++ b/css/global.css
@@ -57,7 +57,7 @@ img {
   height: 100vh; }
   .all-content a h1 {
     position: fixed;
-    font: 15em "OCR", sans-serif;
+    font: 3em "OCR", sans-serif;
     color: #fff;
     top: 7vh;
     left: 5vw;
@@ -94,7 +94,8 @@ img {
   background-repeat: no-repeat;
   background-position: 0% 0%; }
   .home .intro {
-    height: 100vh; }
+    height: 100vh;
+    position: relative; }
     .home .intro h2 {
       font: 2rem "Roboto Condensed Regular", sans-serif;
       text-transform: uppercase;
@@ -102,16 +103,23 @@ img {
       letter-spacing: 3px;
       text-align: center;
       padding-top: 60vh; }
+    .home .intro a {
+      padding: 5px;
+      font: 1rem "Roboto Condensed Regular", sans-serif;
+      position: absolute;
+      bottom: 6vh;
+      right: 4vw;
+      color: #fff; }
 
 .dystopie {
   background-color: #1a217f;
   background-image: url("../img/brain.gif");
-  background-size: 100%;
+  background-size: 120%;
   background-repeat: no-repeat;
-  background-position: 0% 100%;
+  background-position: 40% 100%;
   width: 100%;
-  height: 86vh;
-  padding: 10vh 0 0 20vw; }
+  height: 100vh;
+  padding: 10vh 0 0 26vw; }
   .dystopie h4 {
     font: 1.3rem "Roboto Condensed Regular", sans-serif;
     text-transform: uppercase;
@@ -206,7 +214,7 @@ img {
         top: 18vh;
         left: 0; }
       .components .leaf-component li:nth-of-type(2) {
-        top: -5vh;
+        top: 0;
         left: 50vw; }
       .components .leaf-component li:nth-of-type(3) {
         top: 2vh;
@@ -295,9 +303,15 @@ img {
       border-radius: 50px;
       margin-bottom: 2vh;
       height: 6vh; }
+      .promise .btns button:hover {
+        background: transparent;
+        color: #fff; }
       .promise .btns button:last-of-type {
         background: transparent;
         color: #fff; }
+        .promise .btns button:last-of-type:hover {
+          background: #fff;
+          color: #000; }
 
 .footer {
   position: fixed;
@@ -334,84 +348,86 @@ img {
     margin-right: 2vw;
     margin-top: 1vh; }
 
-.loader div.loader-pill {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 9;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100vh;
-  background: #1a217f;
-  transition: 0.5s;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .loader div.loader-pill .loader-pill-content h2 {
-    font-size: 22px;
-    margin-bottom: 8vh;
-    font-family: "Roboto";
-    font-weight: 100;
-    color: #c3c8df;
-    transform: translateX(-10%); }
-  .loader div.loader-pill .loader-pill-content .shadow {
-    margin-top: 50px;
-    width: 80%;
-    height: 10px;
-    background: rgba(11, 21, 80, 0.4);
-    border-radius: 60%; }
-  .loader div.loader-pill .loader-pill-content .blobs {
-    width: 95px;
-    height: 30px;
-    margin-bottom: 2%;
-    position: relative;
-    overflow: hidden;
-    border-radius: 70px;
-    transform-style: preserve-3d;
-    animation: pills ease 3.7s infinite;
-    border: 1px solid #75d9f0;
-    background: radial-gradient(50% 100%, #fff 75%, #acedfc 100%); }
-    .loader div.loader-pill .loader-pill-content .blobs .bg-left {
-      width: 50%;
-      height: 100%;
-      background: #00b7d8;
-      /* Rectangle 3: */
-      transform: rotate(-180deg);
-      background-image: linear-gradient(0deg, #8aedff 2%, #00b7d8 30%); }
-  .loader div.loader-pill .loader-pill-content .blob {
+.loader {
+  overflow: hidden; }
+  .loader div.loader-pill {
     position: absolute;
-    background: #00b7d8;
     top: 50%;
-    left: 30%;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    animation: blobs ease-out 4.9s infinite;
-    transform: scale(0.9) translate(-50%, -50%);
-    transform-origin: center top;
-    opacity: 0; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(1) {
-      animation-delay: 0.2s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(2) {
-      animation-delay: 0.4s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(3) {
-      animation-delay: 0.6s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(4) {
-      animation-delay: 0.8s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(5) {
-      animation-delay: 1s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(6) {
-      animation-delay: 1.2s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(7) {
-      animation-delay: 1.4s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(8) {
-      animation-delay: 1.6s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(9) {
-      animation-delay: 1.8s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(10) {
-      animation-delay: 2s; }
-    .loader div.loader-pill .loader-pill-content .blob:nth-child(11) {
-      animation-delay: 2.2s; }
+    left: 50%;
+    z-index: 9999999;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100vh;
+    background: #1a217f;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .loader div.loader-pill .loader-pill-content h2 {
+      font-size: 22px;
+      margin-bottom: 8vh;
+      font-family: "Roboto";
+      font-weight: 100;
+      color: #c3c8df;
+      transform: translateX(-10%); }
+    .loader div.loader-pill .loader-pill-content .shadow {
+      margin-top: 50px;
+      width: 80%;
+      height: 10px;
+      background: rgba(11, 21, 80, 0.4);
+      border-radius: 60%; }
+    .loader div.loader-pill .loader-pill-content .blobs {
+      width: 95px;
+      height: 30px;
+      margin-bottom: 2%;
+      position: relative;
+      overflow: hidden;
+      border-radius: 70px;
+      transform-style: preserve-3d;
+      animation: pills ease 3.7s infinite;
+      border: 1px solid #75d9f0;
+      background: radial-gradient(50% 100%, #fff 75%, #acedfc 100%); }
+      .loader div.loader-pill .loader-pill-content .blobs .bg-left {
+        width: 50%;
+        height: 100%;
+        background: #00b7d8;
+        /* Rectangle 3: */
+        transform: rotate(-180deg);
+        background-image: linear-gradient(0deg, #8aedff 2%, #00b7d8 30%); }
+    .loader div.loader-pill .loader-pill-content .blob {
+      position: absolute;
+      background: #00b7d8;
+      top: 50%;
+      left: 30%;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      animation: blobs ease-out 4.9s infinite;
+      transform: scale(0.9) translate(-50%, -50%);
+      transform-origin: center top;
+      opacity: 0; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(1) {
+        animation-delay: 0.2s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(2) {
+        animation-delay: 0.4s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(3) {
+        animation-delay: 0.6s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(4) {
+        animation-delay: 0.8s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(5) {
+        animation-delay: 1s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(6) {
+        animation-delay: 1.2s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(7) {
+        animation-delay: 1.4s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(8) {
+        animation-delay: 1.6s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(9) {
+        animation-delay: 1.8s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(10) {
+        animation-delay: 2s; }
+      .loader div.loader-pill .loader-pill-content .blob:nth-child(11) {
+        animation-delay: 2.2s; }
 @keyframes blobs {
   0% {
     opacity: 0;
