--- a/scss/parts/_home.scss
+++ b/scss/parts/_home.scss
@@ -7,6 +7,7 @@
 
     .intro {
         height: 100vh;
+        position: relative;
 
         h2 {
             font: 2rem $roboto;
@@ -16,6 +17,16 @@
             text-align: center;
             padding-top: 60vh;
         }
+
+        a {
+            padding: 5px;
+            font: 1rem $roboto;
+            position: absolute;
+            bottom: 6vh;
+            right: 4vw;
+            color: $white;
+        }
+
     }
 
 }
