--- a/scss/parts/_loader.scss
+++ b/scss/parts/_loader.scss
@@ -1,11 +1,12 @@
 .loader {
+    overflow: hidden;
 
     div.loader-pill {
         $bolb-color: #00b7d8;
         position: absolute;
         top: 50%;
         left: 50%;
-        z-index: 9;
+        z-index: 9999999;
         transform: translate(-50%, -50%);
         width: 100%;
         height: 100vh;
